# noodle-ai-agent

./: .env.example  README.md  main.py  prompts.py  pyproject.toml  test_get_files_info.py  test_write_file.py
calculator/: lorem.txt
demo/: lorem.txt
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
sdks/: genai.py  ollama.py  openrouter.py
