[project]
name = "noodle-ai-agent"
version = "0.1.0"
description = "AI coding agent that performs tasks within a specified working directory, as well as answers general questions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai==1.12.1",
    "ollama>=0.6.1",
    "python-dotenv==1.1.0",
]
